--- a/scss/simple/_scaffolding.scss
+++ b/scss/simple/_scaffolding.scss
@@ -25,3 +25,10 @@ body {
   cursor: $cursor-default-value;
   -moz-osx-font-smoothing: grayscale;
 }
+
+// Fixing collapsing margins
+html,
+body,
+div {
+  overflow: auto;
+}
