--- a/scss/simple/_type.scss
+++ b/scss/simple/_type.scss
@@ -20,6 +20,7 @@ th,
 td {
   margin:0;
   padding:0;
+  position: relative;
 }
 
 a {
@@ -83,6 +84,11 @@ p {
   }
 }
 
+div {
+  p:last-child {
+    margin-bottom: 0;
+  }
+}
 
 // Background colors
 @include bg-variant('.bg-primary', $primary-color, #fff);
@@ -113,7 +119,6 @@ p {
 .text-right   { text-align: right !important; }
 .text-center  { text-align: center !important; }
 .text-justify { text-align: justify !important; }
-
 
 .subheader {
   line-height: $subheader-line-height;
